--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Project dependencies
+.cache
+node_modules
+yarn-error.log
+/.firebase
+
+# Build directory
+/public
+.DS_Store
+
+# environment
+.env
+/functions/.runtimeconfig.json
+
+*.log
+*.cache
